Improve docs a little

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: tikd
-description: Tools for writing [TIKZ][1] with modern programming supports from Dart.
+description: Tools for writing TIKZ with modern programming supports from Dart.
 version: 0.0.1
 # repository: https://github.com/my_org/my_repo
 
