Fix some documentations

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: tikd
 description: Tools for writing TIKZ with modern programming supports from Dart.
 version: 0.0.1
-# repository: https://github.com/my_org/my_repo
+repository: https://github.com/liyuqian/tikd
 
 environment:
   sdk: ^3.2.3
